# api/src/takab_api/routers/sensors.py
@@ -54,6 +54,7 @@ _WRITE_FIELDS = (
     "mount",
     "lat",
     "lon",
+    "calibration_source",
 )
 
 
